0024877: GCC 4.4.5 compiler warnings on Debian when OCCT is bult using CMake

Warnings fixed